Fix cutoff searchbar, remove extra workspace_id in DmChannelUsers#create, and add seeds.

--- a/app/assets/stylesheets/modals/browse_channel_modal.css
+++ b/app/assets/stylesheets/modals/browse_channel_modal.css
@@ -11,7 +11,9 @@
   z-index: 10;
 
   width: 600px;
-  margin-left: -300px;
+  margin-left: -310px;
+  
+  padding: 10px;
 
   display: flex;
   justify-content: flex-start;
